# Emerald

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: RELEASE_NOTES.md
.github/release-notes/: v1.3.0.md  v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.5.0.md  v1.5.1.md  v1.5.2.md  v1.5.3.md  v1.5.4.md
.github/workflows/: arm-test.yml  performance.yml  release.yml
docs/: MASCOT_ART_SPEC.md  TESTING.md
packaging/: extract_subject.py  make_icons.sh
packaging/linux/: emerald.desktop  make_appimage.sh
packaging/macos/: Info.plist.in  make_icns.py
resources/: emerald.icns  emerald.qss  emerald.rc.in  resources.qrc
src/: main.cpp
src/core/: LinkIndex.cpp  LinkIndex.h  MascotSeed.h  MascotStore.cpp  MascotStore.h  Note.h  Perf.h  SearchIndex.cpp  SearchIndex.h  Vault.cpp  Vault.h  WikiLink.cpp  WikiLink.h
src/ui/: GraphView.cpp  GraphView.h  MainWindow.cpp  MainWindow.h  MarkdownEditor.cpp  MarkdownEditor.h  MarkdownHighlighter.cpp  MarkdownHighlighter.h  Mascot.cpp  Mascot.h  MascotCatalog.cpp  MascotCatalog.h  MathRender.cpp  MathRender.h  SearchPopup.cpp  SearchPopup.h  Updater.cpp  Updater.h
tests/perf/: PerfBench.cpp  README.md  check_perf_budget.py  perf-budget.json
vault-demo/: Markdown Basics.md  Roadmap.md  Welcome.md
